<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/button_primary">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="14dp"
        android:background="@color/button_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_arrow" />

    <ImageButton
        android:id="@+id/listButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="20dp"
        android:background="@color/button_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_list" />

    <ImageButton
        android:id="@+id/profile_photo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="80dp"
        android:background="@color/button_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_pic_square" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="220dp"
        android:text="@string/profile_username"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="250dp"
        android:text="@string/profile_email_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="150dp">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_highest_score"
                android:layout_marginStart="20dp"
                android:layout_alignParentStart="true"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_highest_score_number"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_lowest_score"
                android:layout_marginStart="20dp"
                android:layout_alignParentStart="true"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_lowest_score_number"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_sum_score"
                android:layout_marginStart="20dp"
                android:layout_alignParentStart="true"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_sum_score_number"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_total_qr"
                android:layout_marginStart="20dp"
                android:layout_alignParentStart="true"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_total_qr_number"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_total_score_ranking"
                android:layout_marginStart="20dp"
                android:layout_alignParentStart="true"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_total_score_ranking_number"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_best_score_ranking"
                android:layout_marginStart="20dp"
                android:layout_alignParentStart="true"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_best_score_ranking_number"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_total_qr_ranking"
                android:layout_marginStart="20dp"
                android:layout_alignParentStart="true"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_total_qr_ranking_number"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:background="@drawable/profile_button"
        android:text="@string/profile_add_friend"
        android:textColor="@color/background_color"
        android:textSize="20dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:background="@drawable/profile_button"
        android:text="@string/profile_send_message"
        android:textColor="@color/background_color"
        android:textSize="20dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>