<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <Button
        android:id="@+id/back_button"
        android:layout_width="@dimen/_30dp"
        android:layout_height="@dimen/_30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/ic_arrow_back_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="63dp">

            <TextView
                android:id="@+id/textAddFriend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:paddingStart="10dp"
                android:text="@string/add_new_friend_title_text"
                android:textColor="@color/black"
                android:textSize="23sp" />

            <Button
                android:id="@+id/bt_search_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="20dp"
                android:gravity="fill_vertical"
                android:paddingVertical="5dp"
                android:paddingStart="35dp"
                android:text="@string/search_friend_by_email_text"
                android:textAllCaps="false"
                android:textColor="@color/text_default"
                android:textSize="16sp" />

            <Button
                android:id="@+id/bt_invite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_link"
                android:drawablePadding="20dp"
                android:gravity="fill_vertical"
                android:includeFontPadding="false"
                android:paddingVertical="5dp"
                android:paddingStart="35dp"
                android:text="@string/invite_friend_to_join_text"
                android:textAllCaps="false"
                android:textColor="@color/text_default"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_add_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:paddingStart="10dp"
                android:text="@string/friend_request_title_text"
                android:textColor="@color/black"

                android:textSize="23sp" />

            <LinearLayout
                android:id="@+id/friend_request_list"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </LinearLayout>

            <TextView
                android:id="@+id/text_friend_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:paddingStart="10dp"
                android:text="@string/friend_list_title_text"
                android:textColor="@color/black"

                android:textSize="23sp" />

            <LinearLayout
                android:id="@+id/friend_list"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>